--- a/templates/index.html
+++ b/templates/index.html
@@ -123,13 +123,13 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.youtube.com/channel/UCqrILQNl5Ed9Dz6CGMyvMTQ" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="http://login.yahoo.com" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/youtubecp.png" class="img-responsive" alt="Circus tent">
+                        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.bbc.com%2Fnews%2Fworld-africa-49933774&psig=AOvVaw1JWa-zViq9_uXi-EpejrNM&ust=1587102447864000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJiivcGf7OgCFQAAAAAdAAAAABAD" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
