--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.bbc.com%2Fnews%2Fworld-africa-49933774&psig=AOvVaw1JWa-zViq9_uXi-EpejrNM&ust=1587102447864000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJiivcGf7OgCFQAAAAAdAAAAABAD" class="img-responsive" alt="Circus tent">
+                        <img src="https://media.vanityfair.com/photos/5d2750b1abb5c9000873bced/5:3/w_1940,h_1164,c_limit/lion-king-review.jpg" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
