--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-1/p240x240/76613104_709486116229105_1529078030335475712_n.jpg?_nc_cat=108&_nc_sid=dbb9e7&_nc_oc=AQlml7t5PIHjjWP8UoQUoqa2qsUhTBOLcIpNgRi8PV4u5MLUrcWi3ztbui-aoDdhglI&_nc_ht=scontent-iad3-1.xx&_nc_tp=6&oh=4609b662cce081088a32a138877fba84&oe=5EBF192C" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
-                        <h1 class="name">Hey People {{name}}!</h1>
+                        <h1 class="name">Prof Kim {{name}} :)</h1>
                         <hr class="star-light">
                         <span class="skills">Python Developer - Flask Framework</span>
                     </div>
