--- a/templates/index.html
+++ b/templates/index.html
@@ -143,7 +143,7 @@
                                 <a href="https://www.youtube.com/channel/UCTJ_JKKnn2T8WIuSrl7S-9A?view_as=subscriber" class="btn-social btn-outline" target="_blank"><span class="sr-only">YouTube</span><i class="fa fa-fw fa-youtube"></i></a>
                             </li>
                             <li>
-                                <a href="https://github.com/CleverProgrammer" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
+                                <a href="https://github.com/profkim92" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
