--- a/templates/python_apps.html
+++ b/templates/python_apps.html
@@ -64,7 +64,13 @@
                         </div>
                         <img src="/static/img/time_preview.png" class="img-responsive" alt="Circus tent">
                     </a>
-                </div>      
+                </div> 
+<!-- I added code from this line -->
+<!-- Salary Calculator -->
+                <div >
+                   <h1> Salary Calculator</h1>
+
+                </div>     
             </div>
         </div>
     </section>
