--- a/templates/python_apps.html
+++ b/templates/python_apps.html
@@ -69,7 +69,14 @@
 <!-- Salary Calculator -->
                 <div >
                    <h1> Salary Calculator</h1>
-
+                   <a href="/add_numbers" target="_blank" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="/static/img/salary-calculator.png" target="_blank" class="img-responsive" alt="Cabin">
+                    </a>
                 </div>     
             </div>
         </div>
